--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,16 @@
         <h2>Heading!</h2>
         <p>Paragraph!</p>
         <p>Hi my name is Giuseppe</p>
+        <a href="https://www.amazon.it/">
+            link to amazon
+        </a>
+        <img src="images/amazon.png" 
+        width="100"
+        height="100"/>
+        <ol>
+            <li>stendere l'impasto</li>
+            <li>put on the tomato sauce</li>
+            <li>mettere in forno</li>
+        </ol>
     </body>
 </html>
