--- a/hello.html
+++ b/hello.html
@@ -5,18 +5,31 @@
     </head>
     <body>
         <h1>Heading!</h1>
-        <h2>Heading!</h2>
+        <div class="info">Heading!</div>
         <p>Paragraph!</p>
         <p>Hi my name is Giuseppe</p>
-        <a href="https://www.amazon.it/">
+         <a href="https://www.amazon.it/">
             link to amazon
-        </a>
-        <img src="images/amazon.png" 
-        width="100"
-        height="100"/>
+         </a>
+         <div>
+             <img src="images/amazon.png" 
+             width="100"
+              height="100"/>       
+         </div>
+        <p>Pizza ingridients:</p>
+        <ul>
+            <li>Tomato Sauce</li>
+            <li>Cheese</li>
+                <ul>
+                    <li>Mozzarella</li>
+                    <li>Gorgonzola</li>
+                </ul>
+            <li>Basilico</li>
+        </ul>
+        <p>Pizza steps:</p>
         <ol>
             <li>stendere l'impasto</li>
-            <li>put on the tomato sauce</li>
+            <li>spalmare la salsa</li>
             <li>mettere in forno</li>
         </ol>
     </body>
