--- a/website.html
+++ b/website.html
@@ -10,18 +10,30 @@
 
     <body>
         <section class="image-box">
-               <img src="r8.png" />
+               <img src="images/r8.png" />
         </section>
         <h1>CAR-BOOK</h1>
         <hr> 
-        <section>
-             <h3>only motors</h3>
-             <p>tutto su quattro ruote</p>
+        <div>
+             <h2>Greco's cars</h2>
+        </div>
+        <div>
+            <h3>DACIA-DUSTER</h3>
+      
+        </div>
+        <section class="image-box">
+            <img src="images/dacia.jpg" />
         </section>
-        <section>
-            <h3>le nostre auto</h3>
-            <p>tutte quelle che abbiamo avuto</p>
-       </section>
-    
+            <p>anno</p>
+            <p>manuale</p>
+            <p>prezzo di acquisto:</p>
+        <hr> 
+        <div>
+            <h3>ALFA ROMEO-GTV</h3>
+        </div>
+        <hr> 
+        <div>
+            <h3>PEUGEOT</h3>
+        </div>
     </body>
 </html>
